<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fragment_login_skip_registry">Skip login</string>
    <string name="fragment_pool_detail_how_to_get">How to go</string>
    <string name="fragment_signin_already_registered_1">We\'ve detected that you\'re already registered</string>
    <string name="fragment_signin_already_registered_2">Please enter your password</string>
    <string name="fragment_signin_wrong_credentials">Incorrect credentials</string>
    <string name="fragment_record_title">Record</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="component_btn_filtrar_disponibles_filter_available">Filter available</string>
    <string name="component_button_next_text_button">Next </string>
    <string name="component_edit_text_email_hint">hello@chargerapp.com</string>
    <string name="component_edit_text_password_hint">****************</string>
    <string name="component_edit_text_confirm_password_hint">****************</string>
    <string name="component_label_text_email">Your email</string>
    <string name="component_label_text_pass">Your password</string>
    <string name="component_label_text_confirm_pass">Confirm password</string>
    <string name="component_text_footer">Charger App</string>
    <string name="component_terms_and_cond_accept">I accept the</string>
    <string name="component_terms_and_cond_read"><u>terms and conditions</u></string>
    <string name="component_welcome_text">Welcome</string>
    <string name="dialog_confirm_stop_charge_sure_stop">Are you sure to stop the upload?</string>
    <string name="dialog_confirm_stop_charge_yes_btn">Yes</string>
    <string name="dialog_confirm_stop_charge_no_btn">No</string>
    <string name="dialog_infography_number_ratio">00/00</string>
    <string name="dialog_infography_all_available">All\navailable</string>
    <string name="dialog_infography_some_available">Some \navailable</string>
    <string name="dialog_infography_none_available">None \navailable</string>
    <string name="dialog_infography_out_of_service">Out of \nservice</string>
    <string name="dialog_infography_connectors_available">Available \nconnectors</string>
    <string name="dialog_infography_connectors_in_station">Connectors \nat the station</string>
    <string name="dialog_infography_states">Estate</string>
    <string name="dialog_infography_avalability">Availability</string>
    <string name="dialog_infography_close">X</string>
    <string name="connector_status_available_suspendedevse_suspendedev">Available</string>
    <string name="connector_status_preparing">Connected</string>
    <string name="connector_status_charging_finishing_pfinishing_reserved">Busy</string>
    <string name="connector_status_faulted_uavailable_offline">Not available</string>
    <string name="accept_stop">Accept</string>
    <string name="empty_line"> </string>
    <string name="registry_error_title">Registration error</string>
    <string name="registry_error_message">The entered password must contain at least one number and one symbol.</string>
    <string name="unespected_error_message">An unexpected error occurred, we are sorry for the inconvenience.</string>
    <string name="registry_positive_text">Accept</string>
    <string name="registry_negative_text">Cancel</string>
    <string name="close_voucher">Close voucher</string>
    <string name="content_description">content description</string>
    <string name="time_charging">Time loading</string>
    <string name="charge_end">Charge finished!</string>
    <string name="nav_graph_entry_label_login">login</string>
    <string name="nav_graph_entry_label_signin">sign_in</string>
    <string name="nav_graph_entry_label_signup">sign_up</string>
    <string name="minutes">min</string>
    <string name="kwh">kWh</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="start_charge">Start charge</string>
    <string name="stop_charge">Stop charge</string>
    <string name="connector_status_default">--</string>
    <!---->
    <!---->
    <!---->
    <string name="menu_bottom_historial">Record</string>
    <string name="menu_bottom_map">Map</string>
    <string name="menu_bottom_settings">Settings</string>
    <string name="menu_bottom_upload">Charge</string>
</resources>
