<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_entry_flow"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="cl.codechunksdev.electriccarcharger2.ui.b_entry.login.ui.LoginFragment"
        android:label="@string/nav_graph_entry_label_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_sign_in"
            app:destination="@id/nav_sign_in" />
        <action
            android:id="@+id/action_nav_login_to_nav_sign_up"
            app:destination="@id/nav_sign_up" />
    </fragment>

    <fragment
        android:id="@+id/nav_sign_in"
        android:name="cl.codechunksdev.electriccarcharger2.ui.b_entry.sign_in.ui.SingInFragment"
        android:label="@string/nav_graph_entry_label_signin"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_nav_sign_in_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_sign_up"
        android:name="cl.codechunksdev.electriccarcharger2.ui.b_entry.sign_up.ui.SignUpFragment"
        android:label="@string/nav_graph_entry_label_signup"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_nav_sign_up_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

</navigation>