<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stop_charge_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog"
    android:padding="@dimen/dialog_conf_stop_ch_allpad">

    <TextView
        android:id="@+id/text_confirm_stop_charge"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/dialog_confirm_stop_charge_sure_stop"
        android:textAlignment="center"
        android:textColor="@color/confirm_stopcharge_msg"
        android:textSize="@dimen/dialog_conf_stop_ch_title_txtsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_stop_yes"
        android:layout_width="@dimen/dialog_conf_stop_ch_btn_width"
        android:layout_height="@dimen/dialog_conf_stop_ch_btn_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_round_corner_white_border_normal"
        android:contentDescription="@string/content_description"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/dialog_confirm_stop_charge_yes_btn"
        android:textAllCaps="false"
        android:textColor="@color/confirm_stopcharge_btn_txt_yes"
        android:textSize="@dimen/dialog_conf_stop_ch_btn_txtsize"
        app:layout_constraintEnd_toStartOf="@+id/btn_stop_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_confirm_stop_charge"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_stop_no"
        android:layout_width="@dimen/dialog_conf_stop_ch_btn_width"
        android:layout_height="@dimen/dialog_conf_stop_ch_btn_height"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_btn_round_corner_normal"
        android:contentDescription="@string/content_description"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/dialog_confirm_stop_charge_no_btn"
        android:textAllCaps="false"
        android:textColor="@color/confirm_stopcharge_btn_txt_no"
        android:textSize="@dimen/dialog_conf_stop_ch_btn_txtsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_stop_yes"
        app:layout_constraintTop_toBottomOf="@+id/text_confirm_stop_charge"
        app:layout_constraintVertical_chainStyle="spread" />
</androidx.constraintlayout.widget.ConstraintLayout>



